.apex/unpackaged/objects/redwing__Training_Plan_Access_Request__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Plan Access Requests</relationshipLabel>
        <relationshipName>Training_Plan_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Plan_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Plan Access Request</label>
    <nameField>
        <displayFormat>LPAR-{0000000}</displayFormat>
        <label>Learning Plan Access Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Access Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>